[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
timer = "0.2.0"

[[bin]]
name = "server"
path = "src/server-bin.rs"

[[bin]]
name = "client"
path = "src/client-bin.rs"
