[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash = "0.3.0"
rand = "0.8"

[[bin]]
name = "server"
path = "src/server-bin.rs"

[[bin]]
name = "client"
path = "src/client-bin.rs"
